# napi-rs

./: Cargo.toml  package.json
.github/workflows/: android-armv7.yml  android.yml  cli-binary.yml  linux-aarch64-musl.yaml  linux-musl.yaml  test.yaml  windows-arm.yml  windows-i686.yml  zig.yaml
bench/: package.json
cli/: package.json
crates/backend/src/: ast.rs
crates/backend/src/codegen/: fn.rs
crates/cli/: Cargo.toml  index.js  package.json
crates/cli/src/: build.rs  commands.rs  lib.rs  main.rs  new.rs  util.rs
crates/cli/src/commands/new/: mod.rs
crates/cli/src/commands/new/templates/: github_workflow_yml.tpl
crates/cli/src/new/templates/: gitignore.tpl  package_json.tpl
crates/cli/src/util/: fs.rs  target.rs
crates/cli/src/utils/: fs.rs  logger.rs  mod.rs  require.rs  target.rs  typedef.rs
crates/cli/src/utils/snapshots/: napi_cli__utils__target__tests__target_from_str.snap
crates/macro/src/parser/: mod.rs
crates/napi/: Cargo.toml
crates/napi/src/bindgen_runtime/js_values/: function.rs
examples/binary/: package.json
examples/napi/: index.d.ts  package.json
examples/napi-compat-mode/: package.json
examples/napi/__test__/: typegen.spec.ts.md  typegen.spec.ts.snap  values.spec.ts  values.spec.ts.md
examples/napi/__tests__/__snapshots__/: typegen.spec.ts.md  typegen.spec.ts.snap
examples/napi/src/: callback.rs  class.rs
memory-testing/: package.json
