[package]
name = "napi-cli"
version = "0.1.0"
edition = "2021"
authors = ["Yi Liu <forehalo@gmail.com>"]
description = "A command line interface for Node API Rust bindings"

[[bin]]
name = "napi"
path = "src/main.rs"

[dependencies]
clap = { version = "3", features = ["derive", "env", "cargo"] }
clap-cargo = "0.8"
cargo_metadata = "0.14"
rand = "0.8"
log = { version = "0.4", features = ["std"] }
dialoguer = "0.10"
minijinja = "0.15"
phf = { version = "0.10", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1"
